constraints: validate fullscreen monitors before using them

https://bugzilla.gnome.org/show_bug.cgi?id=766156